# Rover

./: README.md  navi_real.py
codes/testing /markers detection/: box_2.py
codes/testing /obstacle detection/: test3.py
devel/include/auto_navi/: gps_data.h  try1.h  try2.h  try3.h
devel/include/katana_msgs/: GripperControllerState.h  JointMovementAction.h  JointMovementActionFeedback.h  JointMovementActionGoal.h  JointMovementActionResult.h  JointMovementFeedback.h  JointMovementGoal.h  JointMovementResult.h
devel/include/ps3joy/: try2.h
devel/include/robotic_arm/: ghusa.h
devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
devel/include/wiimote/: IrSourceInfo.h  State.h  TimedSwitch.h
devel/lib/camera_calibration_parsers/: convert
devel/lib/camera_info_manager/: unit_test
devel/lib/convex_decomposition/: convex_decomposition
devel/lib/cv_camera/: cv_camera_node
devel/lib/image_transport/: list_transports  republish
devel/lib/ivcon/: ivcon
devel/lib/joy/: joy_node
devel/lib/katana/: katana_arm_kinematics
devel/lib/katana_arm_gazebo/: min_max_trajectory
devel/lib/katana_gazebo_plugins/: test_gripper_joint_trajectory
devel/lib/katana_teleop/: katana_teleop_key
devel/lib/katana_tutorials/: follow_joint_trajectory_client  pr2_joint_trajectory_client
devel/lib/mavros/: gcs_bridge  mavros_node
devel/lib/pkgconfig/: auto_navi.pc  camera_calibration_parsers.pc  camera_info_manager.pc  canny_edge_my_face.pc  convex_decomposition.pc  cv_bridge.pc  cv_camera.pc  gazebo_grasp_plugin.pc  image_geometry.pc  image_transport.pc  imu_data.pc  ivcon.pc  joy.pc  katana.pc  katana_arm_gazebo.pc  katana_description.pc  katana_gazebo_plugins.pc  katana_moveit_ikfast_plugin.pc  katana_msgs.pc  katana_teleop.pc  katana_tutorials.pc  kni.pc  mavros.pc  opencv_tests.pc  polled_camera.pc  ps3joy.pc  robotic_arm.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  (+2 more)
devel/lib/polled_camera/: poller
devel/lib/robotic_arm/: key
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/spacenav_node/: spacenav_node
devel/lib/wiimote/: teleop_wiimote  wiimote_node
devel/share/auto_navi/cmake/: auto_navi-msg-paths.cmake  auto_naviConfig.cmake
devel/share/camera_calibration_parsers/cmake/: camera_calibration_parsersConfig.cmake
devel/share/camera_info_manager/cmake/: camera_info_managerConfig.cmake
devel/share/canny_edge_my_face/cmake/: canny_edge_my_faceConfig.cmake
devel/share/convex_decomposition/cmake/: convex_decompositionConfig.cmake
devel/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
devel/share/cv_camera/cmake/: cv_cameraConfig.cmake
devel/share/gazebo_grasp_plugin/cmake/: gazebo_grasp_pluginConfig.cmake
devel/share/ivcon/cmake/: ivconConfig.cmake
ros_lib/auto_navi/: gps_data.h  try1.h  try2.h  try3.h
ros_lib/katana_msgs/: GripperControllerState.h  JointMovementAction.h  JointMovementActionFeedback.h  JointMovementActionGoal.h  JointMovementActionResult.h  JointMovementFeedback.h  JointMovementGoal.h  JointMovementResult.h
ros_lib/kuka_arm/: CalculateIK.h
ros_lib/ps3joy/: try2.h
src/auto_navi/: CMakeLists.txt  package.xml
src/auto_navi/launch/: drive_system.launch  obs_detection.launch  try1.launch  webcam_launch.launch
src/auto_navi/msg/: try1.msg  try2.msg  try3.msg
src/auto_navi/src/: calc12.py  keyboard1.py  markers_real.py  navi_geo.py  navi_real.py  test12.py  test_1.py  timercal.py  webcam.py  webcam1.py  webtest.py
src/imu_data/: CMakeLists.txt
src/imu_data/src/: gps12.py  gps_based.py  gps_cal.py  gps_multi.py  gps_sol.py  gyro.py  imu_data.py  motorcont.py  turning1.py
src/mavros/launch/: px4.launch
src/ps3joy/: CMakeLists.txt  package.xml
src/ps3joy/launch/: ps3.launch
src/ps3joy/scripts/: ps3111.py  ps3joy_node2.py
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/src/: IK_server.py  arm_move.py  asin.h  asinh.h  buildInfo.mat  complexTimes.cpp  complexTimes.h  ikine_6dof.cpp  ikine_6dof_initialize.cpp  ikine_6dof_rtw.mk  ikine_6dof_terminate.cpp  keyteleop.cpp  new.py  rtGetInf.h  rt_defines.h  rtw_proj.tmw
(+167 files in other folders)
