<package format="2">
  <name>ps3joy</name>
  <version>1.12.0</version>
  <license>BSD</license>

  <description>
    Playstation 3 SIXAXIS or DUAL SHOCK 3 joystick driver.
    Driver for the Sony PlayStation 3 SIXAXIS or DUAL SHOCK 3
    joysticks. In its current state, this driver is not compatible
    with the use of other Bluetooth HID devices. The driver listens
    for a connection on the HID ports, starts the joystick
    streaming data, and passes the data to the Linux uinput device
    so that it shows up as a normal joystick.
  </description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author>Blaise Gassend</author>
  <author>pascal@pabr.org</author>
  <author>Melonee Wise</author>

  <url type="website">http://www.ros.org/wiki/ps3joy</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>libusb-dev</build_depend>
  <build_depend>joystick</build_depend>
  <build_depend>bluez</build_depend>
  <build_depend>python-bluez</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosgraph</build_export_depend>
  <build_export_depend>libusb-dev</build_export_depend>
  <build_export_depend>joystick</build_export_depend>
  <build_export_depend>bluez</build_export_depend>
  <build_export_depend>python-bluez</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>libusb-dev</exec_depend>
  <exec_depend>joystick</exec_depend>
  <exec_depend>bluez</exec_depend>
  <exec_depend>python-bluez</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  
 <!-- <depend>diagnostic_msgs</depend> -->
 <!-- <depend>sensor_msgs</depend> -->
 <!-- <depend>rospy</depend> -->
 <!-- <depend>rosgraph</depend> -->
  <!--<depend>libusb-dev</depend> -->
  <!--<depend>joystick</depend> -->
 <!-- <depend>bluez</depend> -->
 <!-- <depend>python-bluez</depend> -->
  <!--   <doc_depend>doxygen</doc_depend> -->


</package>
